samples/_failures_safe/1761563170_8211f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8fc7b11.c: In function ‘main’:
./samples/SAFE/__tmp_c8fc7b11.c:173:9: error: expected declaration or statement at end of input
  173 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_c8fc7b11.c:173:9: error: expected declaration or statement at end of input
